# fde-cli

./: .gitmodules  00000000 00000000 00000000 00000000 0000  0x0  Cargo.toml  LICENSE  README.md  Untitled-4  name_display_dc_bit.bit  test_script.txt  write_bin.txt
projects/name_display/: name_display_cons.xml
recipes/afifo_demo/: afifo_demo_dc_bit.bit  afifo_demo_meta.json
recipes/afifo_test/: afifo_gate.v  afifo_test_dc_bit.bit  afifo_test_dc_imp.xml  afifo_test_dc_map.rpt  afifo_test_dc_map.xml  afifo_test_dc_p_plc_rpt.xml  afifo_test_dc_pack.xml  afifo_test_dc_place.xml  afifo_test_dc_route.xml
recipes/afifo_test/afifo_test/: RabbitReadData.txt  RabbitWaveForm.vcd  RabbitWriteData.txt
recipes/name_display/: name_display_meta.json
src/: cli.rs  constants.rs  file_parser.rs  main.rs  manager.rs
src/helper/: bitstream.rs  cli_commands.rs  constraints.rs  mod.rs  smims_cfg.rs
src/ports/: mod.rs  parse.rs  table.rs
src/utilities/: fifo.rs
