[package]
name = "fde_cli"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["JUN WEI WANG <wjw_03@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
libusb1-sys = "0.7.0"
once_cell = "1.21.3"
owo-colors = "4.2.0"
promkit = "0.8.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.18.0"
xml-rs = "0.8.25"
